# AI_pack_med

./: MusicGen_Demo.ipynb  README.md
Brats17-dev/: .gitignore  niftynetloader.txt  simulation.sh  simulation_sp.sh  simulation_sp_few.sh  test.py  train.py  train_keras.py
NiftyNet/: imageslicer.py  imageslicer2.0.py  readertest.py
NiftyNet_old/: imagemasking.py  imageslicer_3.0.py  segmentationlabel.py
boruvka_superpixel/: CMakeLists.txt  Makefile  README.md
boruvka_superpixel/benchmark/: bench_bsds500.py  benchmarks.py  benchmarks_cy.pyx  bsr_util.py
boruvka_superpixel/src/: boruvka_parameter.py  boruvka_superpixel.cpp  boruvka_superpixel.h  boruvka_superpixel_wrap.pxd  boruvka_superpixel_wrap.pyx  boruvkasupix.py  boruvkasupix2D.py  boruvkasupix2_3D.py  boruvkasupix3D.py  boruvkasupix3D_D.py  boruvkasupix3D_OFf.py  config.py  config_3D_D.py  main.cpp  of_stat.py  of_test_scene.py  run_city.py  setup.py
docs/: -home-gergely-NiftyNet-niftynet-application-.txt  2018-10-06-Scene.mrml  Demo_kiertekeles.xlsx  Documentation_Nightly_Extensions_VolumeClip - SlicerWiki.html  Git_doksi.odt  Meres1.odp  Névtelen 3.odt  brats17results.odt  cudamentes.odt  debug_regression.odt  deep learning notes.docx  elkiemeles.odt  freedcamp.txt  ismrmrd_reading.odt  kerdesek  kiertekeles.ods  kodcib.odt  matlab - reading v 7.3 mat file in python - Stack Overflow.html  net_hybrid.sh  nipg11server.odt  plot_contours.ipynb  regression.docx  sample_plots.ipynb
scripts/: colorbar.py  demo_fillholes.py  imageslicer.py  launch.json  masking2.py  maszking_demo.py  readertest.py  (+1 more)
(+70 files in other folders)
